...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="My Tasks" id="i3W-Xj-6gb"/>
                    <connections>
                        <outlet property="stages" destination="OIq-ag-e89" id="NJs-RB-zTH"/>
...
                                            <rect key="frame" x="17" y="8" width="169" height="25"/>
                                            <attributedString key="attributedText">
                                                <fragment content="Description">
                                                    <attributes>
                                                        <color key="NSColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Current Tasks" id="5yO-B8-US9"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="YwB-l4-IjH" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                                                <rect key="frame" x="0.0" y="0.0" width="375" height="739"/>
                                                <subviews>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Delivery location (optional)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YmC-WK-rb9">
                                                        <rect key="frame" x="36" y="150" width="303" height="30"/>
                                                        <constraints>
...
                                                        </date>
                                                    </datePicker>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Payment amount ($)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ma9-SD-9TA">
                                                        <rect key="frame" x="36" y="104" width="303" height="30"/>
                                                        <constraints>
...
                                                            <constraint firstAttribute="width" constant="303" id="UhS-ya-tju"/>
                                                        </constraints>
                                                        <state key="normal" title="Submit"/>
                                                        <connections>
                                                            <action selector="submitPressed:" destination="avf-gG-YWQ" eventType="touchUpInside" id="W5e-Wv-OAn"/>
...
                                        <rect key="frame" x="34" y="25" width="307" height="90"/>
                                        <subviews>
                                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="User Icon" translatesAutoresizingMaskIntoConstraints="NO" id="vy6-ju-Ial">
                                                <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
                                                <constraints>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Sign Out" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d7e-uN-D5A">
                                                    <rect key="frame" x="16" y="11" width="67" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                </userDefinedRuntimeAttributes>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="heb-sL-Nn2">
                                <rect key="frame" x="30" y="303" width="316" height="46"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
        <scene sceneID="Xfr-t4-p7V">
            <objects>
                <viewController storyboardIdentifier="Login" id="YUS-7a-aql" customClass="LoginViewController" customModule="_now" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="qcq-ye-AP5"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="dartmouth.edu email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3LO-nC-KIN">
                                <rect key="frame" x="43" y="231" width="289" height="58"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
...
