...
            spinner.stopAnimating()
            if ((user) != nil) {
                let verified: Bool = user!["emailVerified"] as! Bool
                if (verified==false){
                    PFUser.logOut()
                    let emailAlertController = UIAlertController(title: "email not verified", message: "please verify the email address: " + (user!["email"] as! String), preferredStyle: .Alert)
                    let OKAction = UIAlertAction(title: "OK", style: .Default) { (action) in }
                    
                    emailAlertController.addAction(OKAction)
                    
                    self.presentViewController(emailAlertController, animated: true) {}
                    
                }
...
                        dispatch_async(dispatch_get_main_queue(), { () -> Void in
                            self.navigationController?.popViewControllerAnimated(true)
                            
                            // Venmo Auth Flow
                            Venmo.sharedInstance().requestPermissions(["make_payments", "access_profile", "access_phone"]) { (success, error) -> Void in
                                if (success){
                                    let successAlertController = UIAlertController(title: "Success!", message: "All future transactions will go through venmo", preferredStyle: .Alert)
                                    let OKAction = UIAlertAction(title: "OK", style: .Default) { (action) in
                                        dispatch_async(dispatch_get_main_queue(), { () -> Void in
                                            self.navigationController?.popViewControllerAnimated(true)
                                            
//                                            let viewController:UIViewController = UIStoryboard(name: "Main", bundle: nil).instantiateViewControllerWithIdentifier("ContainerViewController")
//                                            self.presentViewController(viewController, animated: true, completion: nil)
...
